syntax = "proto3";

option csharp_namespace = "Proto.V1";

import "base.proto";

message AccountCreatedProto {
  BaseProto base = 1;
  string publicId = 5;
  int32 role = 6;
}