syntax = "proto3";

option csharp_namespace = "Proto";

message BaseProto {
  string event_id = 1;
  string event_version = 2;
  string event_name = 3;
  string event_time = 4;
}